--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,10 +6,10 @@
 <table class="table table-bordered table-striped"> 
     <thead>
         <tr>
-            <th style="width:100px;">@Html.DisplayNameFor(m => m.ProductId)</th>>
-            <th style="width: 100px;">@Html.DisplayNameFor(m => m.Image)</th>>
-            <th>@Html.DisplayNameFor(m => m.Name)</th>>
-            <th style="width: 100px;">@Html.DisplayNameFor(m => m.Price)</th>>
+            <th style="width:100px;">@Html.DisplayNameFor(m => m.ProductId)</th>
+            <th style="width: 100px;">@Html.DisplayNameFor(m => m.Image)</th>
+            <th>@Html.DisplayNameFor(m => m.Name)</th>
+            <th style="width: 100px;">@Html.DisplayNameFor(m => m.Price)</th>
             <th style="width: 130px;"></th>
         </tr>
     </thead>
